k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mta
  labels:
    app.kubernetes.io/part-of: micro-todo-analytics
